bpo-20047: Make bytearray methods partition() and rpartition() rejecting separators that are not bytes-like objects.